--- a/SessionAndCookies/src/main/webapp/web.xml
+++ b/SessionAndCookies/src/main/webapp/web.xml
@@ -6,11 +6,11 @@
   </context-param>
   <context-param>
     <param-name>userName</param-name>
-    <param-value>e2101089</param-value>
+    <param-value>e2101065</param-value>
   </context-param>
   <context-param>
     <param-name>passWord</param-name>
-    <param-value>h8uV4GzDUmb</param-value>
+    <param-value>DZCtWC5pEC2</param-value>
   </context-param>
   
 </web-app>
